[tool.poetry]
name = "repl_python3_python-pro"
version = "0.1.0"
description = ""
authors = ["fikrado <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
plane-war = "^1.0"
prettytable = "^3.0.0"
Menu = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
